# LazyScraper

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  AUTHORS.md  Makefile  README.md  pyproject.toml  scrapy.cfg
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md  question.md
{{cookiecutter.project_slug}}/.gitlab/issue_templates/: Bug.md
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: debug.py  items.py  middlewares.py  pipelines.py  run.sh  settings.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/VIT/: .conf
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
