[tool.poetry]
name = "ccpgithub"
version = "0.1.0"
package-mode = false
description = "python project template."
authors = ["shengchenyang <15538221825@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
