[tool.poetry]
name = "LazyScraper"
version = "0.1.0"
package-mode = false
description = "python project template."
authors = ["shengchenyang <15538221825@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
cookiecutter = "2.6.0"
urllib3 = "~2.2.2"
certifi = "~2024.07.04"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
disable_error_code = ["attr-defined", "arg-type", "union-attr"]

[[tool.mypy.overrides]]
module = [
    "yaml",
    "toml",
    "cookiecutter",
]
ignore_missing_imports = true

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
isort = "5.13.2"
coverage = "7.2.7"
tox = "4.4.12"
flake8 = "7.1.0"
mypy = "1.10.1"
pre-commit = "3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
