[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
package-mode = false
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
maintainers = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
ayugespidertools = "3.9.8"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
isort = "5.13.2"
coverage = "7.2.7"
tox = "4.4.12"
flake8 = "7.1.0"
mypy = "1.10.1"
pre-commit = "3.5.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
disable_error_code = ["attr-defined", "arg-type", "union-attr"]

[[tool.mypy.overrides]]
module = [
    "yaml",
    "toml",
    "pymysql",
    "pymysql.connections",
    "pymysql.cursors",
    "requests",
]
ignore_missing_imports = true
